--- a/aboutus.html
+++ b/aboutus.html
@@ -226,18 +226,12 @@
       <div class="text-center text-danger mb-3">Error sending message!</div>
     </div>
 
-     <div class="mb-3 form-check">
-    <input type="checkbox" class="form-check-input" id="exampleCheck1">
-    <label class="form-check-label" for="exampleCheck1">I would like to get a latest update</label>
-  </div>
-
+ 
     <!-- Form submit button -->
     <div class="text-center">
-      <button class="btn btn-primary btn-lg" type="submit">Submit</button>
+      <button class="btn btn-success btn-lg" type="submit">Send Message</button>
    </div>
-
   </form>
-
 </div>
 
 
@@ -268,13 +262,13 @@ class="text-center text-lg-start text-green">
     <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
       <h6 class="text-uppercase mb-4 font-weight-bold">Services</h6>
       <p>
-        <a class="text-black"href="#">Clinical Services</a>
+        <a class="text-black"href="clinical.html">Clinical Services</a>
       </p>
       <p>
-        <a class="text-black" href="#">Bioanalytical Services</a>
+        <a class="text-black" href="bioanalytical.html">Bioanalytical Services</a>
       </p>
       <p>
-        <a class="text-black" href="#">Scientific Affairs</a>
+        <a class="text-black" href="scientificaffairs.html">Scientific Affairs</a>
       </p>
     </div>
 
@@ -286,11 +280,11 @@ class="text-center text-lg-start text-green">
     <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
       <h6 class="text-uppercase mb-4 font-weight-bold">Home</h6>
       <p>
-        <a class="text-black" href="#"> About Pharma Medica </a></p>
+        <a class="text-black" href="aboutus.html"> About Pharma Medica </a></p>
         <p>
           <a class="text-black" href="#"> Terms & Condition</a></p>
           <p>
-            <a class="text-black" href="#"> Contact Us</a></p>
+            <a class="text-black" href="contactus.html"> Contact Us</a></p>
           </div>
           <!-- Grid column -->
           <hr class="w-100 clearfix d-md-none" /> 
