--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css" integrity="sha384-jLKHWM3JRmfMU0A5x5AkjWkw/EYfGUAGagvnfryNV3F9VqM98XiIH7VBGVoxVSc7" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css" integrity="sha384-jLKHWM3JRmfMU0A5x5AkjWkw/EYfGUAGagvnfryNV3F9VqM98XiIH7VBGVoxVSc7" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
   <link rel="stylesheet" type="text/css" href="css/reset.css">
@@ -18,58 +18,59 @@
   <title>PMRI Website</title>
 </head>
 <body>
-      <nav class="navbar navbar-expand-lg bg-light fixed-top">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="Logo" height="70px" width="250px"></a>
-          <button class="navbar-toggler navbar-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+  <!-- Nav bar -->
+  <nav class="navbar navbar-expand-lg bg-light fixed-top">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="Logo" height="70px" width="250px"></a>
+      <button class="navbar-toggler navbar-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
 
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-              </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+          </li>
 
-              <li class="nav-item dropdown">
-                 <a class="nav-link dropdown-toggle" href="services.html" id="navbarDropdown" > 
-                <!-- <a class="nav-link dropdown-toggle" href="services.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> -->
-                  Services 
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="clinical.html">Clinical Service</a></li>
-                  <li><a class="dropdown-item" href="bioanalytical.html">bioanalytical Services</a></li>
-                  <li><a class="dropdown-item" href="scientificaffairs.html">Scientific Affairs</a></li>
-                </ul>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="scientificHub.html" id="navbarDropdown">Scientific Hub</a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                 <li><a class="dropdown-item" href="researchhub.html">Research Hub</a></li>
-                 <li><a class="dropdown-item" href="PMRInews.html">PMRI News</li></a></li>
-               </ul>
-             </li>
+          <li class="nav-item dropdown">
+           <a class="nav-link dropdown-toggle" href="services.html" id="navbarDropdown" > 
+            <!-- <a class="nav-link dropdown-toggle" href="services.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> -->
+              Services 
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li><a class="dropdown-item" href="clinical.html">Clinical Service</a></li>
+              <li><a class="dropdown-item" href="bioanalytical.html">bioanalytical Services</a></li>
+              <li><a class="dropdown-item" href="scientificaffairs.html">Scientific Affairs</a></li>
+            </ul>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="scientificHub.html" id="navbarDropdown">Scientific Hub</a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+             <li><a class="dropdown-item" href="researchhub.html">Research Hub</a></li>
+             <li><a class="dropdown-item" href="PMRInews.html">PMRI News</li></a></li>
+           </ul>
+         </li>
 
-             <li class="nav-item">
-              <a class="nav-link" href="aboutus.html">About Us</a>
-            </li>
+         <li class="nav-item">
+          <a class="nav-link" href="aboutus.html">About Us</a>
+        </li>
 
-            <li class="nav-item">
-              <a class="nav-link" href="careers.html">Careers</a>
-            </li>
+        <li class="nav-item">
+          <a class="nav-link" href="careers.html">Careers</a>
+        </li>
 
-            <li class="nav-item">
-              <a class="nav-link" href="contactus.html">Contact Us</a>
-            </li>
-            <li class="nav-item">
-              <a href="volunteer.html" class="btn btn-success" >Volunteers</a>
-            </li>
-          </ul>
+        <li class="nav-item">
+          <a class="nav-link" href="contactus.html">Contact Us</a>
+        </li>
+        <li class="nav-item">
+          <a href="volunteer.html" class="btn btn-success" >Volunteers</a>
+        </li>
+      </ul>
 
-        </div>
-      </div>
-    </nav>
+    </div>
   </div>
+</nav>
+</div>
 </div>
 <!-- Carousel Slider -->
 
@@ -121,7 +122,7 @@
   <div class="container">
    <div class="row text-center mx-auto">
     <div class="col-md-6">
-      <h1 class="pb-3"> Available Service</h1>
+      <h2 class="pb-3"> Available Service</h2>
       <p>Clinical Service</p>
       <p>Bioanalytical Service</p>
       <p>Scientific Affairs</p>
@@ -223,10 +224,7 @@
       <div class="text-center text-danger mb-3">Error sending message!</div>
     </div>
 
-     <div class="mb-3 form-check">
-    <input type="checkbox" class="form-check-input" id="exampleCheck1">
-    <label class="form-check-label" for="exampleCheck1">I would like to get a latest update</label>
-  </div>
+    
 
     <!-- Form submit button -->
     <div class="text-center">
@@ -345,8 +343,6 @@ class="text-center text-lg-start text-green">
     <!-- Copyright -->
   </footer>
   <!-- Footer -->
-
-
 
   <script type="text/javascript" src="js/bootstrap.min.js"></script>
   <script type="text/javascript" src="js/main.js"></script>
