--- a/volunteerlogin.html
+++ b/volunteerlogin.html
@@ -121,7 +121,7 @@
                 </div>
 
                 <div class="d-flex justify-content-center">
-                  <button type="button" class="btn btn-success btn-block btn-lg text-body">Register</button>
+                  <button type="button" class="btn btn-success btn-block btn-lg">Register</button>
                 </div>
 
                 <p class="text-center text-muted mt-5 mb-0">Have already an account? <a href="volunteer.html" class="fw-bold text-body"><u>Login here</u></a></p>
