--- a/volunteer.html
+++ b/volunteer.html
@@ -84,8 +84,9 @@
           <h1>Volunteers </h1>
           <h5>What to Expect : Frequently Asked Questions</h5>
           <a href="readmore.html">
-           <!-- <img src="img/volunteer/FAQ.png" class="img-fluid rounded-start" height="350px" width="350px">  -->
-           <img src="img/volunteer/FAQ1.png" class="img-fluid rounded-start" height="350px" width="350px">
+             <img src="img/volunteer/FAQ.png" class="img-fluid rounded-start" height="350px" width="350px">  
+           <!-- <img src="img/volunteer/FAQ1.png" class="img-fluid rounded-start" height="350px" width="350px"> -->
+           <!-- <img src="img/volunteer/FAQ2.png" class="img-fluid rounded-start" height="350px" width="350px"> -->
          </a>
        </div>
      </div>
@@ -99,20 +100,30 @@
  <p class="pt-3">It starts with you.  By deciding to participate in a clinical trial you are playing a vital role in getting drugs to market that may be able to help you, your loved ones and even people you don't know around the world.  To all of our past participants we thank you.  If you are thinking about it, come experience Pharma Medica Research Inc.</p>
 </div>
 
+<div class="container">
+  <div class="row g-0">
+<div class="col-md-6 text-center py-5">
+          <a class=" btn btn-xl btn-block mybtn  tx-tfm" href="https://www.epmri.com/">LOGIN  <i class="fa fa-sign-in" aria-hidden="true"></i></a>
+        </div>
+<div class="col-md-6 text-center py-5">
+          <a class=" btn btn-xl btn-block mybtn  tx-tfm" href="https://www.epmri.com/signup">SIGN UP  <i class="fa fa-user-plus" aria-hidden="true"></i></a>
+        </div>
+</div>
+      </div>
 
 <!-- FAQ section -->
 
  <div class="row justify-content-center bg-green">
     <div class="col-md-6 px-5 text-center">      
       <div class="d-block mt-3"><h3 class="text-white">Do you want to participate in Clinical Trial?  </h3></div> 
-      <a class="btn btn-secondary m-3" href="readmore.html" >Read more</a>  
+      <a class="btn btn-secondary m-3" href="readmore.html" >Discover</a>  
     </div>
   </div>
 
 
-<!-- Login page --> 
 
-<div class="container pt-5">
+
+<!-- <div class="container pt-5">
 
   <div class="col-md-5 mx-auto">
     <div class="card" style="border-radius: 15px;">
@@ -139,7 +150,7 @@
         </div>
 
         <div class="col-md-12 text-center py-3">
-          <button type="submit" class=" btn btn-block mybtn btn-success tx-tfm">Login</button>
+          <strong><button type="submit" class=" btn btn-xl btn-block mybtn btn-success tx-tfm"><strong>Login </strong> <i class="fa fa-sign-in" aria-hidden="true"></i></button></strong>
         </div>
 
         <div class="form-group">
@@ -150,13 +161,13 @@
   </div>        
 </div> 
 </div>
-</div>
+</div> -->
 
 
 <!-- Cards -->
 
 <div class="container p-5">
-<div class="card text-center mx-auto" style="background-color: #b59a56;">
+<div class="card text-center mx-auto" style="background-color: #E6D88A;">
   <div class="row g-0 pt-5">
     <div class="col-md-8">
       <h2 class="card-title text-center m-3">Who We Are?</h2>
@@ -185,7 +196,7 @@
 <!-- Card -2 -->
 
 <div class="container px-5">
-<div class="card text-center mx-auto" style="background-color: #b59a56;">
+<div class="card text-center mx-auto" style="background-color: #E6D88A;">
   <div class="row g-0 pt-5">
     <div class="col-md-8">
       <h2 class="card-title text-center m-3">Privacy</h2>
@@ -368,13 +379,13 @@ class="text-center text-lg-start text-green">
     <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
       <h6 class="text-uppercase mb-4 font-weight-bold">Services</h6>
       <p>
-        <a class="text-black"href="#">Clinical Services</a>
+        <a class="text-black"href="clinical.html">Clinical Services</a>
       </p>
       <p>
-        <a class="text-black" href="#">Bioanalytical Services</a>
+        <a class="text-black" href="bioanalytical.html">Bioanalytical Services</a>
       </p>
       <p>
-        <a class="text-black" href="#">Scientific Affairs</a>
+        <a class="text-black" href="scientificaffairs.html">Scientific Affairs</a>
       </p>
     </div>
 
@@ -386,11 +397,11 @@ class="text-center text-lg-start text-green">
     <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
       <h6 class="text-uppercase mb-4 font-weight-bold">Home</h6>
       <p>
-        <a class="text-black" href="#"> About Pharma Medica </a></p>
+        <a class="text-black" href="aboutus.html"> About Pharma Medica </a></p>
         <p>
           <a class="text-black" href="#"> Terms & Condition</a></p>
           <p>
-            <a class="text-black" href="#"> Contact Us</a></p>
+            <a class="text-black" href="contactus.html"> Contact Us</a></p>
           </div>
           <!-- Grid column -->
           <hr class="w-100 clearfix d-md-none" /> 
