--- a/volunteer.html
+++ b/volunteer.html
@@ -135,10 +135,10 @@
   <div class="container px-5"> 
     <div class="row g-0 px-5 ">
       <div class="col-md-6 text-center py-4" > 
-        <a class=" btn btn-xl btn-block mybtn  tx-tfm  " href="https://www.epmri.com/">LOGIN  <i class="fa fa-sign-in" aria-hidden="true"></i></a>
+        <a class=" btn btn-xl btn-block mybtn" href="https://www.epmri.com/">LOGIN  <i class="fa fa-sign-in" aria-hidden="true"></i></a>
       </div>
       <div class="col-md-6 text-center py-4">
-        <a class=" btn btn-xl btn-block mybtn  tx-tfm" href="https://www.epmri.com/signup">SIGN UP  <i class="fa fa-user-plus" aria-hidden="true"></i></a>
+        <a class=" btn btn-xl btn-block mybtn" href="https://www.epmri.com/signup">SIGN UP  <i class="fa fa-user-plus" aria-hidden="true"></i></a>
       </div>
     </div>  
   </div>
