--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css" integrity="sha384-jLKHWM3JRmfMU0A5x5AkjWkw/EYfGUAGagvnfryNV3F9VqM98XiIH7VBGVoxVSc7" crossorigin="anonymous">
+
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
   <link rel="stylesheet" type="text/css" href="css/reset.css">
@@ -16,6 +17,10 @@
 
   <script type="text/javascript" src="js/respond.js"></script>
   <title>PMRI Website</title>
+  <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
+  <link rel="manifest" href="img/favicon/site.webmanifest">
 </head>
 <body>
   <!-- Nav bar -->
@@ -39,7 +44,7 @@
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
               <li><a class="dropdown-item" href="clinical.html">Clinical Service</a></li>
-              <li><a class="dropdown-item" href="bioanalytical.html">bioanalytical Services</a></li>
+              <li><a class="dropdown-item" href="bioanalytical.html">Bioanalytical Services</a></li>
               <li><a class="dropdown-item" href="scientificaffairs.html">Scientific Affairs</a></li>
             </ul>
           </li>
@@ -72,6 +77,11 @@
 </nav>
 </div>
 </div>
+
+<button type="button" class="btn btn-success btn-floating btn-lg" id="btn-back-to-top">
+  <i class="fa fa-arrow-up"></i>
+</button>
+
 <!-- Carousel Slider -->
 
 <div id="carousel" class="carousel slide" data-bs-ride="carousel">
@@ -107,7 +117,7 @@
 
 <!-- About us section  -->
 
-<div class="container-fluid p-5 text-center">
+<div class="container p-5 text-center">
  <div class="row"></div>
  <div class="container">
    <h2> Our Unique client-focused approach truly differentiates us.</h2>
@@ -116,9 +126,52 @@
 </div>
 </div> 
 
-<!-- Service Section -->
+<!-- Services with cards --> 
 
-<div class="container-fluid p-5 bg-dark border row text-center">
+<div class="container">
+  <div class="row">
+    <div class="col-lg-4">
+      <div class="mov">
+        <img src="img/aboutus/clinical.png" alt="Avatar" class="image" alt="Avatar">
+        <div class="overlay">
+          <div class="text">Clinical Services 
+           <div class="pt-3"><a href="services.html" class="btn btn-success"> Read More </a>
+           </div>
+         </div>
+       </div>
+     </div>
+   </div>
+
+   <div class="col-lg-4">
+      <div class="mov">
+        <img src="img/aboutus/bioanalytical.png" alt="Avatar" class="image" alt="Avatar">
+        <div class="overlay">
+           <div class="text">Bioanlytical Services
+           <div class="pt-3"><a href="services.html" class="btn btn-success"> Read More </a>
+           </div>
+         </div>
+       </div>
+     </div>
+   </div>
+
+   <div class="col-lg-4">
+      <div class="mov">
+        <img src="img/aboutus/scientific.png" alt="Avatar" class="image" alt="Avatar">
+        <div class="overlay">
+           <div class="text">Scientific Affairs 
+           <div class="pt-3"><a href="services.html" class="btn btn-success"> Read More </a>
+           </div>
+         </div>
+       </div>
+     </div>
+   </div>
+ </div>
+</div>
+
+
+<!-- Service Section 
+
+<div class="bg-dark border row text-center p-5">
   <div class="container">
    <div class="row text-center mx-auto">
     <div class="col-md-6">
@@ -134,7 +187,7 @@
     </div>
   </div>
 </div>
-</div>
+</div> -->
 
 <!-- Testimonials -->
 <div class="container">
@@ -198,8 +251,6 @@
       <div class="invalid-feedback" data-sb-feedback="name:required">Last Name is required.</div>
     </div>
 
-
-
     <!-- Email address input -->
     <div class="mb-3">
       <label class="form-label" for="emailAddress">Email Address</label>
@@ -223,17 +274,70 @@
     <div class="d-none" id="submitErrorMessage">
       <div class="text-center text-danger mb-3">Error sending message!</div>
     </div>
-
-    
-
     <!-- Form submit button -->
     <div class="text-center">
       <button class="btn btn-success btn-lg" type="submit">Send Message</button>
    </div>
-
   </form>
-
 </div>
+
+
+<!-- Company logo -->
+
+<div class="content d-flex align-items-center justify-content-center">
+    <div class="spin rounded">
+
+      
+        <div class="h3 text-center pt-2">Trusted By Many</div>
+        <div class="fs-5 text-center pb-3 mb-3">Here are some of the regulatory audits, accreditations and certifications we have received over the years</div>
+
+      <div class="rollers position-relative overflow-hidden">
+            <div class="start-roller"></div>
+            <div class="wrapper">
+                <div class="items-container roll-LL">
+                    <div class="item"> <img src="img/Homepage-service.png" alt="" class="company"> </div>
+                    <div class="item"> <img src="img/Homepage-service.png" alt="" class="company"> </div>
+                    <div class="item"> <img src="img/Homepage-service.png" alt="" class="company"> </div>
+                    <div class="item"> <img src="img/Homepage-service.png" alt="" class="company"> </div>
+                    <div class="item"> <img src="img/Homepage-service.png" alt="" class="company"> </div>
+                    <div class="item"> <img src="img/Homepage-service.png" alt="" class="company"></div>
+                </div>
+                <div class="items-container roll-RL">
+                    <div class="item"> <img src="img/Homepage-service.png" alt="" class="company"> </div>
+                    <div class="item"> <img src="img/Homepage-service.png" alt="" class="company"> </div>
+                    <div class="item"> <img src="img/Homepage-service.png" alt="" class="company"> </div>
+                    <div class="item"> <img src="img/Homepage-service.png" alt="" class="company"> </div>
+                    <div class="item"> <img src="img/Homepage-service.png" alt="" class="company"> </div>
+                    <div class="item"> <img src="img/Homepage-service.png" alt="" class="company"> </div>
+                </div>
+            </div>
+
+            <div class="wrapper">
+                <div class="items-container reverse-roll-LL">
+                    <div class="item"> <img src="img/Homepage-service.png" alt="" class="company"> </div>
+                    <div class="item"> <img src="img/Homepage-service.png" alt="" class="company"> </div>
+                    <div class="item"> <img src="img/Homepage-service.png" alt="" class="company"> </div>
+                    <div class="item"> <img src="img/Homepage-service.png" alt="" class="company"> </div>
+                    <div class="item"> <img src="img/Homepage-service.png" alt="" class="company"> </div>
+                    <div class="item"> <img src="img/Homepage-service.png" alt="" class="company"> </div>
+                </div>
+                <div class="items-container reverse-roll-RL">
+                    <div class="item"> <img src="img/Homepage-service.png" alt="" class="company"> </div>
+                    <div class="item"> <img src="img/Homepage-service.png" alt="" class="company"> </div>
+                    <div class="item"> <img src="img/Homepage-service.png" alt="" class="company"> </div>
+                    <div class="item"> <img src="img/Homepage-service.png" alt="" class="company"> </div>
+                    <div class="item"> <img src="img/Homepage-service.png" alt="" class="company"> </div>
+                    <div class="item"> <img src="img/Homepage-service.png" alt="" class="company"> </div>
+                </div>
+
+              </div>
+            <div class="end-roller"></div>
+        </div>
+    </div>
+</div>  
+
+<!-- Chat pop-up -->
+
 
 <!-- Newsletter --> 
 
@@ -262,13 +366,13 @@ class="text-center text-lg-start text-green">
     <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
       <h6 class="text-uppercase mb-4 font-weight-bold">Services</h6>
       <p>
-        <a class="text-black"href="#">Clinical Services</a>
+        <a class="text-black"href="clinical.html">Clinical Services</a>
       </p>
       <p>
-        <a class="text-black" href="#">Bioanalytical Services</a>
+        <a class="text-black" href="bioanalytical.html">Bioanalytical Services</a>
       </p>
       <p>
-        <a class="text-black" href="#">Scientific Affairs</a>
+        <a class="text-black" href="scientificaffairs.html">Scientific Affairs</a>
       </p>
     </div>
 
@@ -280,11 +384,11 @@ class="text-center text-lg-start text-green">
     <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
       <h6 class="text-uppercase mb-4 font-weight-bold">Home</h6>
       <p>
-        <a class="text-black" href="#"> About Pharma Medica </a></p>
+        <a class="text-black" href="aboutus.html"> About Pharma Medica </a></p>
         <p>
           <a class="text-black" href="#"> Terms & Condition</a></p>
           <p>
-            <a class="text-black" href="#"> Contact Us</a></p>
+            <a class="text-black" href="contactus.html"> Contact Us</a></p>
           </div>
           <!-- Grid column -->
           <hr class="w-100 clearfix d-md-none" /> 
