--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
   <div class="row">
     <div class="col-lg-4">
       <div class="mov">
-        <img src="img/Aboutus/clinical.png" alt="Avatar" class="image" alt="Avatar">
+        <img src="img/AboutUs/clinical.png" alt="Avatar" class="image" alt="Avatar">
         <div class="overlay">
           <div class="text">Clinical Services 
            <div class="pt-3"><a href="services.html" class="btn btn-success"> Read More </a>
@@ -144,7 +144,7 @@
 
    <div class="col-lg-4">
       <div class="mov">
-        <img src="img/Aboutus/bioanalytical.png" alt="Avatar" class="image" alt="Avatar">
+        <img src="img/AboutUs/bioanalytical.png" alt="Avatar" class="image" alt="Avatar">
         <div class="overlay">
            <div class="text">Bioanlytical Services
            <div class="pt-3"><a href="services.html" class="btn btn-success"> Read More </a>
@@ -156,7 +156,7 @@
 
    <div class="col-lg-4">
       <div class="mov">
-        <img src="img/Aboutus/scientific.png" alt="Avatar" class="image" alt="Avatar">
+        <img src="img/AboutUs/scientific.png" alt="Avatar" class="image" alt="Avatar">
         <div class="overlay">
            <div class="text">Scientific Affairs 
            <div class="pt-3"><a href="services.html" class="btn btn-success"> Read More </a>
