--- a/clinical.html
+++ b/clinical.html
@@ -16,9 +16,16 @@
 
   <script type="text/javascript" src="js/respond.js"></script>
   <title>PMRI Website</title>
+
+  <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
+  <link rel="manifest" href="img/favicon/site.webmanifest">
+  
 </head>
 <body>
   <!-- Nav bar -->
+    <!-- Nav bar -->
   <nav class="navbar navbar-expand-lg bg-light fixed-top">
     <div class="container-fluid">
       <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="Logo" height="70px" width="250px"></a>
@@ -39,17 +46,21 @@
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
               <li><a class="dropdown-item" href="clinical.html">Clinical Service</a></li>
-              <li><a class="dropdown-item" href="bioanalytical.html">bioanalytical Services</a></li>
+              <li><a class="dropdown-item" href="bioanalytical.html">Bioanalytical Services</a></li>
               <li><a class="dropdown-item" href="scientificaffairs.html">Scientific Affairs</a></li>
             </ul>
           </li>
-          <li class="nav-item dropdown">
+          <!-- <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="scientificHub.html" id="navbarDropdown">Scientific Hub</a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
              <li><a class="dropdown-item" href="researchhub.html">Research Hub</a></li>
              <li><a class="dropdown-item" href="PMRInews.html">PMRI News</li></a></li>
            </ul>
-         </li>
+         </li> -->
+
+         <li class="nav-item">
+          <a class="nav-link" href="PMRInews.html">PMRI News</a>
+        </li>
 
          <li class="nav-item">
           <a class="nav-link" href="aboutus.html">About Us</a>
@@ -232,13 +243,13 @@
             <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
               <h6 class="text-uppercase mb-4 font-weight-bold">Services</h6>
               <p>
-                <a class="text-black"href="#">Clinical Services</a>
+                <a class="text-black"href="clinical.html">Clinical Services</a>
               </p>
               <p>
-                <a class="text-black" href="#">Bioanalytical Services</a>
+                <a class="text-black" href="bioanalytical.html">Bioanalytical Services</a>
               </p>
               <p>
-                <a class="text-black" href="#">Scientific Affairs</a>
+                <a class="text-black" href="scientificaffairs.html">Scientific Affairs</a>
               </p>
             </div>
 
@@ -250,11 +261,11 @@
             <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
               <h6 class="text-uppercase mb-4 font-weight-bold">Home</h6>
               <p>
-                <a class="text-black" href="#"> About Pharma Medica </a></p>
+                <a class="text-black" href="aboutus.html"> About Pharma Medica </a></p>
                 <p>
                   <a class="text-black" href="#"> Terms & Condition</a></p>
                   <p>
-                    <a class="text-black" href="#"> Contact Us</a></p>
+                    <a class="text-black" href="contactus.html"> Contact Us</a></p>
                   </div>
                   <!-- Grid column -->
                   <hr class="w-100 clearfix d-md-none" /> 
