--- a/index.html
+++ b/index.html
@@ -48,13 +48,17 @@
               <li><a class="dropdown-item" href="scientificaffairs.html">Scientific Affairs</a></li>
             </ul>
           </li>
-          <li class="nav-item dropdown">
+          <!-- <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="scientificHub.html" id="navbarDropdown">Scientific Hub</a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
              <li><a class="dropdown-item" href="researchhub.html">Research Hub</a></li>
              <li><a class="dropdown-item" href="PMRInews.html">PMRI News</li></a></li>
            </ul>
-         </li>
+         </li> -->
+
+         <li class="nav-item">
+          <a class="nav-link" href="PMRInews.html">PMRI News</a>
+        </li>
 
          <li class="nav-item">
           <a class="nav-link" href="aboutus.html">About Us</a>
@@ -284,10 +288,8 @@
 
 <!-- Company logo -->
 
-<div class="content d-flex align-items-center justify-content-center">
-    <div class="spin rounded">
-
-      
+<div class="content d-flex align-items-center justify-content-center pb-3">
+    <div class="spin rounded">      
         <div class="h3 text-center pt-2">Trusted By Many</div>
         <div class="fs-5 text-center pb-3 mb-3">Here are some of the regulatory audits, accreditations and certifications we have received over the years</div>
 
