--- a/volunteer.html
+++ b/volunteer.html
@@ -35,9 +35,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-
-            
-          <li class="nav-item">
+            <li class="nav-item">
             <a href="volunteer.html" class="btn btn-success" >Volunteers</a>
           </li>
         </ul>
@@ -49,22 +47,7 @@
 </div>
 </div>
 
-<!-- <input type="checkbox" id="check"> <label class="chat-btn" for="check"> <i class="fa fa-commenting-o comment"></i> <i class="fa fa-close close"></i> </label>
-<div class="chatblock">
-  <div class="container">
-    <div class="header">
-        Welcome to Pharma Medica !!
-    </div>
-    <div id="container" class="container flex">
-    <div id="chat" class="chat">
-      <div id="messages" class="messages"></div>
-      <input id="input" type="text" placeholder="Type Here !!  " autocomplete="off" autofocus="true" />
-    </div>
-  </div>
-</div>
-</div> -->
 <!-- Banner --> 
-
 <!-- <div class="container-fluid">
  <div class="page-header-volunteer">
   <div class="overlay">
@@ -394,7 +377,10 @@
   <div class="row justify-content-center bg-green align-items-center">
     <div class="col-md-6 px-5 text-center">      
       <span class="d-block mt-3"><h3 class="text-white">Stay Informed!!  <br> Sign Up for news letter </h3></span> 
-      <div class="input-group mb-4 mt-4"> <input type="text" class="form-control" placeholder="Enter email" aria-label="Recipient's username" aria-describedby="button-addon2"> <button class="btn btn-success border-rad" type="button" id="button-addon2">Subscribe</button> </div>
+      <div class="input-group mb-4 mt-4"> <input type="text" class="form-control" placeholder="Enter email" aria-label="Recipient's username"> 
+        <button class="btn btn-success border-rad" type="button" id="button-addon2">Subscribe</button>
+       <!--  <button class="btn btn-primary border-rad" type="button" >Subscribe</button>  -->
+      </div>
     </div>
   </div>
 
@@ -497,6 +483,21 @@
         <!-- Copyright -->
       </footer>
       <!-- Footer -->
+
+<!-- Ebot chat popup window -->
+
+<input type="checkbox" id="check"> <label class="chat-btn" for="check"> <i class="fa fa-commenting-o comment"></i> <i class="fa fa-close close"></i> </label>
+<div class="chatblock">
+  <div class="header">
+    Welcome to Pharma Medica !!
+  </div>
+  <div id="container" class="container flex">
+    <div id="chat" class="chat">
+      <div id="messages" class="messages"></div>
+      <input id="input" type="text" placeholder="Type Here !!" autocomplete="off" autofocus="true"> </i></input>
+    </div>
+  </div>
+</div>
 
 
       <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
